crates/swc_ecma_react_compiler/tests/fixtures/upstream/error.ref-initialization-other/error.txt
Found 1 error:

Error: Cannot access refs during render

React refs are values that are not needed for rendering. Refs should only be accessed outside of render, such as in event handlers or effects. Accessing a ref value (the `current` property) during render can cause your component not to update as expected (https://react.dev/reference/react/useRef).

   6 |   const r2 = useRef(null);
   7 |   if (r.current == null) {
>  8 |     r2.current = 1;
     |     ^^^^^^^^^^ Cannot update ref during render
   9 |   }
  10 | }
  11 |
